<resources>
    <string name="app_name">Graduationproject</string>

    <!-- ted permission -->
    <string name="permission_1">[설정] -> [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <!-- Main menu Activity strings -->
    <string name="main_menu_welcome">환영합니다 OOO님</string>
    <string name="main_menu_logout">로그아웃</string>
    <string name="main_menu_bs_dict">식물 정보 사전</string>
    <string name="main_menu_bs_imagesearch">식물 이미지 검색</string>
    <string name="main_menu_bs_recommend">선호 작물 추천</string>
    <string name="main_menu_bs_recording">내 원예 활동</string>

    <!-- Dictionary Activity strings -->
    <string name="dictionary_name">식물 정보 사전</string>
    <string name="dictionary_searchbar_hint">식물명, 예)장미</string>

    <!-- Gardening Guide Layout strings -->
    <string name="gardening_guide_name">원예 가이드</string>
    <string name="gardening_guide_propagation">번식법</string>
    <string name="gardening_guide_disease">병충해 예방</string>
    <string name="gardening_guide_climate">적정 기온</string>
    <string name="gardening_guide_soil">적정 토양</string>
    <string name="gardening_guide_water">물주기</string>
    <string name="gardening_guide_fertilizer">비료 관리</string>

    <!-- Comment Layout strings -->
    <string name="comment_name">후기 작성</string>
    <string name="comment_author">작성자</string>
    <string name="comment_context">작성 내용</string>

    <!-- Comments list Layout strings -->
    <string name="comments_list_name">원예 후기</string>

    <!-- Plant Recommend Activity strings -->
    <string name="recommend_name">선호 작물 추천</string>

    <!-- Image Search Activity strings -->
    <string name="imagesearch_name">식물 이미지 검색</string>
    <string name="imagesearch_button_album">앨범에서 가져오기</string>
    <string name="imagesearch_button_camera">사진 촬영하기</string>
    <string name="imagesearch_button_search">검색</string>

    <!-- Image Search Result Activity strings -->
    <string name="imagesearchresult_name">검색 결과</string>
    <string name="imagesearchresult_plantname">식물명 :</string>
    <string name="imagesearchresult_probability">일치 확률 :</string>
    <string name="imagesearchresult_button_info">식물 정보 보기</string>


    <!-- Dictionary Search Result Activity strings -->
    <string name="searchresult_name">식물 정보</string>
    <string name="searchresult_text_plantinfo">식물 기본정보</string>
    <string name="searchresult_text_plantname">식물명: </string>
    <string name="searchresult_text_botanical_name">학명: </string>
    <string name="searchresult_text_botanical_kingdom">계: </string>
    <string name="searchresult_text_botanical_division">문: </string>
    <string name="searchresult_text_botanical_class">강: </string>
    <string name="searchresult_text_botanical_order">문: </string>
    <string name="searchresult_text_botanical_family">과: </string>
    <string name="searchresult_text_botanical_genus">속: </string>
    <string name="searchresult_text_flowering_time">개화 시기: </string>
    <string name="searchresult_text_sowing_period">파종 시기: </string>
    <string name="searchresult_text_origin">원산지: </string>

    <string name="searchresult_text_requirements">원예 요구사항</string>
    <string name="searchresult_text_size">크기 </string>

    <string name="searchresult_text_min_height">식물 크기: </string>
    <string name="searchresult_text_difficulty">난이도: </string>
    <string name="searchresult_text_max_temp">최대 온도: </string>
    <string name="searchresult_text_min_temp">최소 온도: </string>
    <string name="searchresult_text_light_amount">광량: </string>
    <string name="searchresult_text_soil_type">토양: </string>
    <string name="searchresult_text_soil_ph">산성도: </string>
    <string name="searchresult_text_soil_drainage">배수도: </string>

    <string name="searchresult_text_review">원예 후기</string>
    <string name="searchresult_text_comment">후기 작성하기</string>
    <string name="searchresult_text_comment_list">원예 후기 보기</string>
    <string name="searchresult_text_guide">원예 가이드 보기</string>

    <!-- Listing plants Activity strings -->
    <string name="listing_plants_name">내 원예 활동</string>

    <!-- Add My activity Activity strings -->
    <string name="addActivity_name">원예 활동 추가</string>
    <string name="addActivity_attr_name_activity">활동 이름</string>
    <string name="addActivity_attr_name_plant">식물명</string>
    <string name="addActivity_attr_name_createdAt">시작 일시</string>
    <string name="addActivity_attr_name_endedAt">종료 일시</string>
    <string name="addActivity_attr_id_manager">팀장</string>
    <string name="addActivity_attr_id_participants">참가자</string>
    <string name="addActivity_attr_image">대표 사진 등록</string>
    <string name="addActivity_attr_sensor">환경 탐지 센서 등록</string>
    <string name="addActivity_button_add">등록</string>
    <string name="addActivity_example_name_activity">예) MyActivity</string>
    <string name="addActivity_example_name_plant">예) Sunflower</string>
    <string name="addActivity_example_createdAt">예) 2019.01.01</string>
    <string name="addActivity_example_id_manager">예) manager</string>
    <string name="addActivity_example_id_participant">예) participant</string>
    <string name="addActivity_example_sensor">센서명</string>
    <string name="addActivity_button_getFromAlbum">앨범에서 가져오기</string>
    <string name="addActivity_button_getByCamera">사진 촬영</string>
    <string name="addActivity_button_getSensor">센서 가져오기</string>

    <!-- Gardening activity information Activity strings -->
    <string name="activity_info">내 원예 활동</string>
    <string name="activity_info_name_activity">ActivityName</string>
    <string name="activity_info_createdAt">활동 시작일</string>
    <string name="activity_info_participatedAt">내 활동 참가일</string>
    <string name="activity_info_participants">참가자</string>

</resources>
