<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plant_recommend">

    <ScrollView
        android:id="@+id/searchresult_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchresult_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/menu_name_searchresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/searchresult_name"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/searchresult_back"
                android:layout_width="40dp"
                android:layout_height="38dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <ImageView
                android:id="@+id/searchresult_resultimage"
                android:layout_width="134dp"
                android:layout_height="144dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_name_searchresult"
                app:srcCompat="@drawable/login" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/plant_info_layout"
                android:layout_width="342dp"
                android:layout_height="298dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchresult_resultimage">

                <TextView
                    android:id="@+id/searchresult_text_botanical_division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_botanical_division"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_botanical_kingdom" />

                <TextView
                    android:id="@+id/searchresult_text_botanical_kingdom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_botanical_kingdom"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_botanical_name" />

                <TextView
                    android:id="@+id/searchresult_text_flowering_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_flowering_time"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_origin" />

                <TextView
                    android:id="@+id/searchresult_text_botanical_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_botanical_order"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_botanical_class" />

                <TextView
                    android:id="@+id/searchresult_text_botanical_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_botanical_class"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_botanical_division" />

                <TextView
                    android:id="@+id/searchresult_text_botanical_genus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_botanical_genus"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_botanical_family" />

                <TextView
                    android:id="@+id/searchresult_text_botanical_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_botanical_family"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_botanical_order" />

                <TextView
                    android:id="@+id/searchresult_text_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_origin"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_botanical_genus" />

                <TextView
                    android:id="@+id/searchresult_text_botanical_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_botanical_name"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_plantname" />

                <TextView
                    android:id="@+id/searchresult_text_plantname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/searchresult_text_plantname"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/searchresult_text_sowing_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_sowing_period"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_plantname"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_flowering_time" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/requirement_layout"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_info_layout">

                <TextView
                    android:id="@+id/searchresult_text_requirements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/searchresult_text_requirements"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/searchresult_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/searchresult_text_size"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_requirements" />

                <TextView
                    android:id="@+id/searchresult_text_min_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_min_height"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_size" />

                <TextView
                    android:id="@+id/searchresult_text_max_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_max_height"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_min_height" />

                <TextView
                    android:id="@+id/searchresult_text_min_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_min_width"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_max_height" />

                <TextView
                    android:id="@+id/searchresult_text_max_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_max_width"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_min_width" />

                <TextView
                    android:id="@+id/searchresult_text_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/searchresult_text_difficulty"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_max_width" />

                <TextView
                    android:id="@+id/searchresult_text_min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_min_temp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_difficulty"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_difficulty" />

                <TextView
                    android:id="@+id/searchresult_text_max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_max_temp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_min_temp"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_min_temp" />

                <TextView
                    android:id="@+id/searchresult_text_light_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_light_amount"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_max_temp"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_max_temp" />

                <TextView
                    android:id="@+id/searchresult_text_soil_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_soil_type"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_light_amount"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_light_amount" />

                <TextView
                    android:id="@+id/searchresult_text_soil_ph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_soil_ph"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_soil_type"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_soil_type" />

                <TextView
                    android:id="@+id/searchresult_text_soil_drainage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/searchresult_text_soil_drainage"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/searchresult_text_soil_ph"
                    app:layout_constraintTop_toBottomOf="@+id/searchresult_text_soil_ph" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/review_layout"
                android:layout_width="342dp"
                android:layout_height="500dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requirement_layout">

                <Button
                    android:id="@+id/searchresult_button_guide"
                    android:layout_width="165dp"
                    android:layout_height="42dp"
                    android:text="@string/searchresult_text_guide"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/searchresult_text_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/searchresult_text_review"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/list_reviews"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.307"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>